    libqt4-dev.
  * Bump Standards-Version to 3.9.2, no changes required.
  * Pass the arguments to `dh' after the target name (dh v8 compatibility).
  * Build-depend on dh-autoreconf and use the dh autoreconf addon.
  * Use wildcard architectures:
    - !kfreebsd-i386 !kfreebsd-amd64 !hurd-i386 -> linux-any
  * Switch to my @debian.org address, I'm a DD now.

 -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Mon, 21 Feb 2011 14:04:53 +0100

google-gadgets (0.11.2-3) unstable; urgency=low

  [ Pino Toscano ]
  * Remove the postinst and postrm scripts of google-gadgets-common, as
    dh_installmime will take care of adding the proper snippets to trigger
    update-mime-database. (Closes: #591863)
  * Update debian/copyright:
    - explicitly list the sources in unittest/ which are licensed as BSD.
    - put the whole BSD license text instead of referring to
      /usr/share/common-licenses/BSD, which is deprecated in Debian Policy
      3.9.0.0.
  * Bump Standards-Version to 3.9.1.
  * Change the Vcs-* headers to the new Git repository location.
  * Switch to format "3.0 (quilt)":
    - drop quilt build-dependency.
    - no need to use the quilt dh addon.
    - remove the debian/README.source file.
  * Rename libggadget-1.0-0.docs to libggadget-1.0-0b.docs, missed in the
    previous ABI adaptation.
  * Add myself as uploader.
  * Add "DM-Upload-Allowed: yes" in debian/control.

 -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Sun, 08 Aug 2010 10:31:02 +0200

google-gadgets (0.11.2-2) unstable; urgency=low

  * Release to unstable.

 -- Modestas Vainius <modax@debian.org>  Sat, 01 May 2010 23:14:12 +0300

google-gadgets (0.11.2-1) experimental; urgency=low

  [ Pino Toscano ]
  * New upstream release:
    - fixes a typo in the "World Daylight Clock". (Closes: #566168)
    - fixes GTK+ expose events with GTK+ >= 2.18. (Closes: #566169)
    - links ggl-qt to X11 and Xrender (Closes: #554696)