@@ -4,13 +4,13 @@ Priority: extra
 Maintainer: Debian Krap Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Sune Vuorela <debian@pusling.com>, Modestas Vainius <modax@debian.org>, Fathi Boudra <fabo@debian.org>, Pino Toscano <pino@debian.org>
 Build-Depends: debhelper (>= 7.0.50~), automake, autoconf, dh-autoreconf,
- libtool, chrpath, zip, libsoup2.4-dev (>= 2.26.0),
+ libtool, zip, libsoup2.4-dev (>= 2.26.0),
  libdbus-1-dev, libeditline-dev, libgtk2.0-dev,
  libgstreamer-plugins-base0.10-dev, libltdl3-dev, libqt4-dev, libqtwebkit-dev,
  librsvg2-dev,
  libstartup-notification0-dev, libxml2-dev,
  network-manager-dev [linux-any],
- xulrunner-dev (>= 1.9.1.6), zlib1g-dev
+ zlib1g-dev
 Standards-Version: 3.9.2
 Vcs-Git: git://git.debian.org/pkg-kde/krap/google-gadgets.git
 Vcs-Browser: http://git.debian.org/?p=pkg-kde/krap/google-gadgets.git
@@ -128,7 +128,6 @@ Section: gnome
 Architecture: any
 Depends: google-gadgets-common (= ${binary:Version}),
  google-gadgets-gst (= ${binary:Version}),
- google-gadgets-xul (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: GTK+ Version of Google Gadgets
  Google Gadgets for Linux provides a platform for running desktop gadgets under
@@ -144,7 +143,6 @@ Section: kde
 Architecture: any
 Depends: google-gadgets-common (= ${binary:Version}),
  google-gadgets-gst (= ${binary:Version}),
- google-gadgets-xul (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: Qt4 version of Google Gadgets
  Google Gadgets for Linux provides a platform for running desktop gadgets under
@@ -168,17 +166,3 @@ Description: GStreamer Module for Google Gadgets
  under the Apache License.
  .
  This package includes the GStreamer modules.
-
-Package: google-gadgets-xul
-Section: misc
-Architecture: any
-Depends: google-gadgets-common (= ${binary:Version}),
- ${shlibs:Depends}, ${misc:Depends}
-Description: XULRunner module for Google Gadgets
- Google Gadgets for Linux provides a platform for running desktop gadgets under
- Linux, catering to the unique needs of Linux users. It is compatible with the
- gadgets written for Google Desktop for Windows as well as the Universal
- Gadgets on iGoogle. Following Linux norms, this project is open-sourced,
- under the Apache License.
- .
- This package includes the XULRunner Modules.
