@@ -1,3 +1,0 @@
-usr/lib/google-gadgets/gtkmoz-browser-child
-usr/lib/google-gadgets/modules/gtkmoz*.so
-usr/lib/google-gadgets/modules/smjs*.so
