@@ -4,7 +4,7 @@
 #export DH_VERBOSE=1
 
 %:
-	dh $@ --with autoreconf,xulrunner
+	dh $@ --with autoreconf
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
@@ -13,13 +13,11 @@ override_dh_auto_configure:
 		--enable-ltdl-install=no
 
 override_dh_install:
-	chrpath -d debian/tmp/usr/lib/google-gadgets/gtkmoz-browser-child
-	chrpath -d debian/tmp/usr/lib/google-gadgets/modules/smjs-script-runtime.so
 	dh_install --list-missing -X.la
 
 override_dh_makeshlibs:
 	dh_makeshlibs -V -Ngoogle-gadgets-common -Ngoogle-gadgets-gtk \
-		-Ngoogle-gadgets-qt -Ngoogle-gadgets-gst -Ngoogle-gadgets-xul
+		-Ngoogle-gadgets-qt -Ngoogle-gadgets-gst
 
 get-orig-source:
 	# rename to what debian wants, repack to tgz rather than tbz2
